[metadata]
name = f5-cli
author = John Trenholm
author-email = jw@xomar.com
summary = CLI interface for F5 BIG-IP, built on top of bigsuds
description-file = README.rst
license =
home-page = https://github.com/jdubs/f5-cli
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
platforms = any

[files]
packages = f5_cli

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    f5-cli = f5_cli.f5_cli:main
